update index.html final

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,18 +1,15 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<header>
-    <img src="image/gangsan21_logo.png" alt="gangsan21_logo">
-</header>
 <head>
     <meta charset="UTF-8">
     <link th:href="@{/css/bootstrap.min.css}"
           href="../css/bootstrap.min.css" rel="stylesheet">
-    <title>Carefree Life's OCR Result</title>
+    <title>Gangsan21 M&A</title>
 </head>
 <body>
 <div class="container" style="max-width: 900px">
     <div class="py-5 text-center">
-        <h1>CarefreeLife's 강산21 M&A OCR</h1>
+        <h1>Gangsan21 M&A</h1>
     </div>
     <img src="image/gangsan21_logo.png" alt="gangsan21_logo">
     <br><br>
@@ -20,6 +17,24 @@
         <div class="col">
             <form action="/upload-form" method="get">
                 <button type="submit">등기 영수증 / 사업자 등록증 OCR</button>
+            </form>
+            <form action="/" method="get">
+                <button type="submit">추후 업데이트 예정</button>
+            </form>
+            <form action="/" method="get">
+                <button type="submit">추후 업데이트 예정</button>
+            </form>
+            <form action="/" method="get">
+                <button type="submit">추후 업데이트 예정</button>
+            </form>
+            <form action="/" method="get">
+                <button type="submit">추후 업데이트 예정</button>
+            </form>
+            <form action="/" method="get">
+                <button type="submit">추후 업데이트 예정</button>
+            </form>
+            <form action="/" method="get">
+                <button type="submit">추후 업데이트 예정</button>
             </form>
         </div>
     </div>
