--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -19,8 +19,8 @@
             <form action="/upload-form" method="get">
                 <button type="submit">등기 영수증 / 사업자 등록증 OCR</button>
             </form>
-            <form action="/" method="get">
-                <button type="submit">추후 업데이트 예정</button>
+            <form action="/crawler/InputForm" method="get">
+                <button type="submit">웹 크롤링</button>
             </form>
             <form action="/" method="get">
                 <button type="submit">추후 업데이트 예정</button>
