Update Gang San 21 News

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -22,7 +22,7 @@
             <form action="/crawler/InputForm" method="get">
                 <button type="submit">웹 크롤링</button>
             </form>
-            <form action="/" method="get">
+            <form action="/news" method="get">
                 <button type="submit">추후 업데이트 예정</button>
             </form>
             <form action="/" method="get">
