index.html 업데이트

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -23,7 +23,7 @@
                 <button type="submit">웹 크롤링</button>
             </form>
             <form action="/news" method="get">
-                <button type="submit">추후 업데이트 예정</button>
+                <button type="submit">강산21 뉴스</button>
             </form>
             <form action="/" method="get">
                 <button type="submit">추후 업데이트 예정</button>
