Update Kica Service

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -65,8 +65,8 @@
             <form action="/news" method="get">
                 <button type="submit" class="btn btn-custom">강산 21 뉴스</button>
             </form>
-            <form action="/molit" method="get">
-                <button type="submit" class="btn btn-custom">[국토교통부] 건설업체조회 및 Excel 다운로드</button>
+            <form action="/construct" method="get">
+                <button type="submit" class="btn btn-custom">건설업체조회 및 Excel 다운로드</button>
             </form>
             <form action="/" method="get">
                 <button type="submit" class="btn btn-custom">추후 업데이트 예정</button>
